--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -78,7 +78,7 @@
 						<label for="file-upload" class="custom-file-upload">
 							<i class="fa fa-cloud-upload"></i>
 						</label>
-						<input id= "file-upload" type="file" (change) = "fileChangeEvent($event)" multiple/>
+						<input id= "file-upload" type="file" (change) = "filesChangeEvent($event)" multiple/>
 					<button id="send" (click) = "sendMessage(selectedChatroom.type, selectedChatroom.to)">--></button><br>
 					<div></div><!--progress bar -->
 					<!-- file upload -->
