--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,8 +59,9 @@
 									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
-												<img src = "https://www.marriage.com/advice/wp-content/uploads/2016/09/44.jpg">
+												
 										</div>
+										<img src = "https://www.marriage.com/advice/wp-content/uploads/2016/09/44.jpg" style="width:100%; height: 200px">
 								</div>
 						</ng-template>
 						<ng-template #displayothermessage>
