--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -61,7 +61,7 @@
 												{{message.data.text}}
 												
 										</div>
-										<img src = "https://www.marriage.com/advice/wp-content/uploads/2016/09/44.jpg" style="width:100%; height: 200px">
+										<img  style="width:100%; height: 200px">
 								</div>
 						</ng-template>
 						<ng-template #displayothermessage>
@@ -84,7 +84,11 @@
 					<button id="send" (click) = "sendMessage(selectedChatroom.type, selectedChatroom.to)">--></button><br>
 					<div></div><!--progress bar -->
 					<!-- file upload -->
-					<div></div>
+					<div id = "files-to-upload">
+							<ul class="w3-ul w3-center">
+									<li *ngFor = "let file of filesToUpload">{{file.name}}</li>
+							</ul>
+					</div>
 				</div>
 
 			</div>
