--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -61,7 +61,7 @@
 												{{message.data.text}}
 												
 										</div>
-										<img *ngFor = style="width:100%; height: 200px">
+										<img *ngFor ="let image of message.data.images" style="width:100%; height: 200px">
 								</div>
 						</ng-template>
 						<ng-template #displayothermessage>
