--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -82,11 +82,11 @@
 						</label>
 						<input id= "file-upload-1" type="file" (change) = "filesChangeEvent($event)" multiple/>
 					<button id="send" (click) = "sendMessage(selectedChatroom.type, selectedChatroom.to)">--></button><br>
-					<!-- file upload -->
-					<br>
+					<div id = "files-to-upload">
 							<ul class="w3-ul w3-center">
-								<li *ngFor = "let file of filesToUpload">{{file.name}}</li>
+									<li *ngFor = "let file of filesToUpload">{{file.name}}</li>
 							</ul>
+					</div>
 				</div>
 
 			</div>
