--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -66,7 +66,7 @@
 						</ng-template>
 						<ng-template #displayothermessage>
 								<div class="message">
-											<img src="{{users[message.author].profile_pic}}"
+											<img src="{{users[message.author].profile_pic}}">
 										<div class="bubble">
 												{{message.data.text}}
 										</div>
