--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,14 +59,13 @@
 									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
-												
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
 								</div>
 						</ng-template>
 						<ng-template #displayothermessage>
 								<div class="message">
-											<img src="{{users[message.author].profile_pic}}">
+											<img src= "{{users[message.author].profile_pic}}" alt = "">
 										<div class="bubble">
 												{{message.data.text}}
 										</div>
