--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,6 +59,7 @@
 									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
+												<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
 								</div>
