--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,7 +59,10 @@
 									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
-												<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
+												<br>
+												<ul class = "w3-ul">
+													<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
+												</ul>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
 								</div>
@@ -69,7 +72,7 @@
 											<img src= "{{users[message.author].profile_pic}}" alt = "">
 										<div class="bubble">
 												{{message.data.text}}
-												<ul>
+												<ul class = "w3-ul">
 													<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
 												</ul>
 										</div>
