--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,10 +59,9 @@
 									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
-												<br>
-												<ul class = "w3-ul">
-													<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
-												</ul>
+										</div>
+										<div class = "bubble" *ngFor = "let link of message.data.links">
+											<a href = "{{link}}">{{link}}</a>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
 								</div>
@@ -72,9 +71,9 @@
 											<img src= "{{users[message.author].profile_pic}}" alt = "">
 										<div class="bubble">
 												{{message.data.text}}
-												<ul class = "w3-ul">
-													<li *ngFor = "let link of message.data.links"><a href = "{{link}}">{{link}}</a></li>
-												</ul>
+										</div>
+										<div class = "bubble" *ngFor = "let link of message.data.links">
+											<a href = "{{link}}">{{link}}</a>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
 								</div>
