--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -60,7 +60,7 @@
 										<div class="bubble">
 												{{message.data.text}}
 										</div>
-										<div class = "bubble" *ngFor = "let link of message.data.links">
+										<div class = "bubble" *ngFor = "let link of message.data.links" style="width: 100%">
 											<a href = "{{link}}">{{link}}</a>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
@@ -72,7 +72,7 @@
 										<div class="bubble">
 												{{message.data.text}}
 										</div>
-										<div class = "bubble" *ngFor = "let link of message.data.links">
+										<div class = "bubble" *ngFor = "let link of message.data.links" style="width: 100%">
 											<a href = "{{link}}">{{link}}</a>
 										</div>
 										<img *ngFor ="let image of message.data.images" src = "{{image}}" style="width:100%; height: 200px">
