--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -137,7 +137,8 @@
   <div class="modal-content">
       <span class="close">&times;</span>
       <h2>GreenAms Messenger</h2>
-      <app-messenger [currentUser] = "CurrentUser"
+      <app-messenger 
+        [currentUser] = "CurrentUser"
         [currentId]= "id"
         [users] = "users"
         [userKeys] = "userKeys"
