--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -140,6 +140,7 @@
         [currentUser] = "CurrentUser"
         [currentId]= "id"
         [users] = "users"
+        [userKeys] = "userKeys"
       ></app-messenger>
   </div>
 </div>
