--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -139,6 +139,7 @@
       <app-messenger 
         [currentUser] = "CurrentUser"
         [currentId]= "id"
+        [users]= "users"
       ></app-messenger>
   </div>
 </div>
