--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -53,7 +53,7 @@ margin-left: -155px;
 
 #friendslist {
 position: absolute;
-overflow : scroll
+overflow : scroll;
 top: 0;
 left: 0;
 width: 290px;
