--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -31,7 +31,7 @@
 					</div>
 					
 					<div id="search">
-						<input type="text" id="searchfield" value="Search contacts...">
+						<input type="text" id="searchfield" placeholder ="Search contacts..." (change) = "searchContact()">
 					</div>
 
 				</div>
