--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -31,7 +31,7 @@
 					</div>
 					
 					<div id="search">
-						<input type="text" id="searchfield" (change)= "searchContact()" placeholder ="Search contacts..." >
+						<input type="text" id="searchfield" (keyup)= "searchContact()" placeholder ="Search contacts..." >
 					</div>
 
 				</div>
