--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,9 +8,9 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
-      <a href="#" class="w3-bar-item w3-button">One new friend request</a>
-      <a href="#" class="w3-bar-item w3-button">John Doe posted on your wall</a>
-      <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
+      <a class="w3-bar-item w3-button">One new friend request</a>
+      <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
+      <a class="w3-bar-item w3-button">Jane likes your post</a>
     </div>
   </div>
   <a class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
@@ -20,7 +20,7 @@
  <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
   <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "logout()" >LOG OUT</a>
-  <a href= "#schedule" class="w3-bar-item w3-button w3-padding-large" >SCHEDULE</a>
+  <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollToSchedule()">SCHEDULE</a>
 </div>
 </div>
 
