--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -95,7 +95,7 @@
           <p>{{event.time}}</p>
         </div>
       </div>
-      <br>  
+      <hr class = "w3-clear">  
     <!-- End Right Column -->
     </div>
     
