--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,9 +5,9 @@
   <a class="w3-bar-item w3-button w3-padding-large w3-theme-d4" (click) = "scrollTo('mainpage')"><i class="fa fa-home w3-margin-right" ></i>GROUP</a>
   <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages" (click) = "navigateChat()"><i class="fa fa-envelope"></i></a>
   <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages" (click) = "logout()"><i class="fa fa-sign-out" style="font-size:24px"></i></a>
-  <div class="w3-dropdown-hover">
+  <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
-    <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:75%; word-wrap:break-word">
+    <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
       <a class="w3-bar-item w3-button">One new friend request</a>
       <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
       <a class="w3-bar-item w3-button">Jane likes your post</a>
@@ -21,6 +21,16 @@
   <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "logout()" >LOG OUT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollTo('schedule')">SCHEDULE</a>
+  <a class="w3-bar-item w3-button w3-padding-large" >
+      <div class="w3-dropdown-hover">
+          <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
+          <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:100%">
+            <a class="w3-bar-item w3-button">One new friend request</a>
+            <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
+            <a class="w3-bar-item w3-button">Jane likes your post</a>
+          </div>
+        </div>
+  </a>
 </div>
 </div>
 
