--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
   <a class="w3-bar-item w3-button w3-padding-large" >
       <div class="w3-dropdown-hover">
           <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
-          <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:100%">
+          <div class="w3-dropdown-content" style="width:100%">
             <a class="w3-bar-item w3-button">One new friend request</a>
             <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
             <a class="w3-bar-item w3-button">Jane likes your post</a>
