--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,15 +21,13 @@
   <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "logout()" >LOG OUT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollTo('schedule')">SCHEDULE</a>
-  <a class="w3-bar-item w3-button w3-padding-large" >
-      <div class="w3-dropdown-hover">
-          <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
+  <a class="w3-bar-item w3-button w3-padding-large w3-dropdown-hover"></a>
+   <i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
           <div class="w3-dropdown-content" style="width:100%">
             <a class="w3-bar-item w3-button">One new friend request</a>
             <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
             <a class="w3-bar-item w3-button">Jane likes your post</a>
           </div>
-        </div>
   </a>
 </div>
 </div>
