--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "toggleNotification()">
       <i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span>     
   </a>
-  <div class="w3-dropdown-content w3-padding-large" id = "notification">
+  <div class="w3-dropdown-content w3-padding-large w3-green" id = "notification">
       <a class="w3-bar-item w3-button">One new friend request</a>
       <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
       <a class="w3-bar-item w3-button">Jane likes your post</a>
