--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -15,6 +15,7 @@
 							<img src="{{users[userkey].profile_pic}}">
 							<p>
 								<strong>{{users[userkey].name}}</strong>
+								<span></span>
 							</p>
 							<div class="status {{users[userkey].realtime}}"></div>
 						</div>		
@@ -24,7 +25,7 @@
 									<img src="{{groups[groupkey].picture}}">
 									<p>
 										<strong>{{groups[groupkey].name}}</strong>
-										<span>online</span>
+										<span></span>
 									</p>
 									<div class="status online"></div>
 					</div>
