--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,10 +7,14 @@
   <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages" (click) = "logout()"><i class="fa fa-sign-out" style="font-size:24px"></i></a>
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
-    <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
-      <a class="w3-bar-item w3-button">One new friend request</a>
-      <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
-      <a class="w3-bar-item w3-button">Jane likes your post</a>
+    <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px; height: 500px; overflow: auto">
+      <table class="new_noti_table" *ngFor = "let noti of Notifications" (click)= "goToSourceNoti(noti)">
+        <tr class="new_noti_row w3-cell-row">
+          <td class="new_noti_img"><img src="{{noti.notification.icon}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:45px"></td>
+          <td class="new_noti_text"><b>{{noti.notification.title}}</b>
+          <p innerHTML = "{{noti.notification.body}}"></p>
+        </tr>
+      </table>
     </div>
   </div>
   <a class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
@@ -25,7 +29,7 @@
       <i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span>     
   </a>
   <div class="w3-dropdown-content w3-padding-large w3-green" id = "notification">
-      <a class="w3-bar-item w3-button">One new friend request</a>
+      <a class="w3-bar-item w3-button"></a>
       <a class="w3-bar-item w3-button">John Doe posted on your wall</a>
       <a class="w3-bar-item w3-button">Jane likes your post</a>
   </div>
