--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollTo('schedule')">SCHEDULE</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "toggleNotification()">
       <i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green" *ngIf = "Notifications.length > 0">{{Notifications.length}}</span>
-      <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:600px; overflow: auto;max-width: 500px" *ngIf = "Notifications.length > 0">
+      <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:600px; overflow: auto;max-width: 500px" *ngIf = "Notifications.length > 0" id= "notification">
         <table class="new_noti_table" *ngFor = "let noti of Notifications" (click)= "goToSourceNoti(noti)">
           <tr class="new_noti_row w3-cell-row">
             <td class="new_noti_img"><img src="{{noti.notification.icon}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:45px"></td>
@@ -37,7 +37,6 @@
         </table>
       </div>     
   </a>
- 
 </div>
 </div>
 
