--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -70,7 +70,7 @@ margin-top:2px;
 vertical-align:top;
 }
 #myBtn {
-    display: none;
+    display: block;
     position: fixed;
     bottom: 20px;
     right: 30px;
