--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
     <img src='{{CurrentUser.profile_pic}}' class="w3-circle" style="height:30px;width:30px" alt="Avatar">
   </a>
  </div>
- <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" style="width:100%; overflow: auto; max-height: 500px" *ngIf = "Notifications.length > 0" #notidiv>
+ <div class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-large" style="width:100%; overflow: auto; max-height: 500px" *ngIf = "Notifications.length > 0" #notidiv>
     <table class="new_noti_table" *ngFor = "let noti of Notifications" (click)= "goToSourceNoti(noti)">
       <tr class="new_noti_row w3-cell-row">
         <td class="new_noti_img"><img src="{{noti.notification.icon}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:45px"></td>
@@ -38,7 +38,7 @@
       </tr>
     </table>
 </div>
- <div class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
+ <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
   <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "logout()" >LOG OUT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollTo('schedule')">SCHEDULE</a>
