--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -38,7 +38,7 @@
       <tr class="new_comment_row w3-cell-row">
         <td class="new_comment_img" ><img src="{{users[comment.author].profile_pic}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:55px"></td>
         <td class="new_comment_text" ><b>{{users[comment.author].name}}</b>
-        <p innerHTML = "{{comment.message}}"></p>
+        <p innerHTML = "{{comment.message}}"></p></td>
       </tr>
     </table>
   </div> 
