--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -58,7 +58,7 @@ max-width :700px;
 font: size 10;
 margin:1px 0 0 25px;
 }
-.new_noti_row
+.new_noti_row_new
 {
 background-color: rgb(18, 231, 46);
 }
