--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"  (click)="openNav()"><i class="fa fa-bars"></i></a>
   <a class="w3-bar-item w3-button w3-padding-large w3-theme-d4" (click) = "scrollTo('mainpage')"><i class="fa fa-home w3-margin-right" ></i>GROUP</a>
-  <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"  (click) = "navigateChat()"><i class="fa fa-envelope"></i><span class="w3-badge w3-right w3-small w3-red" id = "numofmessage"></span></a>
+  <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"  (click) = "navigateChat()"><i class="fa fa-envelope"></i><span class="w3-badge w3-right w3-small w3-red" id = "numofmessage">new</span></a>
   <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"  (click) = "logout()"><i class="fa fa-sign-out" style="font-size:24px"></i></a>
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green" *ngIf = "newNotiNum >0" >{{newNotiNum}}</span></button>     
